package sample.impl;

public class ManageAttractionSalesImpl {
    private int attraction_cost(int cost) {
        return 9548;
    }

    public void buy_attraction(int price, int budget) {

    }

    public void set_name(String name) {

    }
}
