package sample.impl;

public class ManageTicketSalesImpl {

    private int ticket_cost(int budget) {
        return 0;
    }

    public void purchase_ticket(int budget, int salary) {

    }
}
