package sample.impl;

import javafx.collections.ObservableList;
import sample.Visitor;

public class ManageVisitorsImpl {

    public void add_visitor(int id, int salary) {

    }

    public boolean delete_visitor(int id) {
        return true;
    }

    public boolean remove_visitor_from_park(int id) {
        return true;
    }

    public void move_visitor(int id, String attractionName) {

    }

    private ObservableList<Visitor> view_list_visitors(int id, int salary) {
        return null;
    }
}
